--- a/Angular_Frontend/src/app/components/home/home.component.css
+++ b/Angular_Frontend/src/app/components/home/home.component.css
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: center;
   background-color: #3776a1;
+  border-radius: 20px;
   color: #fff;
   text-align: center;
   font-family: "Segoe UI", Roboto, Arial, sans-serif;
@@ -68,6 +69,11 @@
   background-color: rgba(255, 255, 255, 0.2);
 }
 
+.feature-card:hover {
+  transform: translateY(-5px);
+  background-color: rgba(255, 255, 255, 0.25);
+}
+
 .features {
   display: flex;
   flex-wrap: wrap;
@@ -76,7 +82,7 @@
   max-width: 1000px;
 }
 
-.feature-card {
+.feature-box {
   background-color:darkorange;
   border-radius: 10px;
   padding: 30px 20px;
@@ -86,23 +92,23 @@
   transition: transform 0.3s ease, 0.3s ease;
 }
 
-.feature-card:hover {
+.feature-box:hover {
   transform: translateY(-5px);
-  background-color: rgba(255, 255, 255, 0.25);
+
 }
 
-.feature-card i {
+.feature-box i {
   font-size: 40px;
   color: #ffd85d;
   margin-bottom: 16px;
 }
 
-.feature-card h3 {
+.feature-box h3 {
   margin-bottom: 8px;
   font-size: 21px;
 }
 
-.feature-card p {
+.feature-box p {
   font-size: 16px;
   opacity: 0.9;
 }
@@ -118,7 +124,7 @@
     align-items: center;
   }
 
-  .feature-card {
+  .feature-box {
     max-width: 90%;
   }
 }
