--- a/Angular_Frontend/src/app/components/home/home.component.html
+++ b/Angular_Frontend/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="section">
-    <h1>Üdvözllek a <span>FCM DAPP</span> oldalán!</h1>
+    <h1>Üdvözöllek az <span>FCM DAPP</span> oldalán!</h1>
     <p>
       Ez egy olyan szerződéskezelő rendszer, ahol a csapatok és játékosok <strong>blokkláncon</strong> kezelhetik szerződéseiket.
     </p>
