--- a/Angular_Frontend/src/app/components/home/home.component.html
+++ b/Angular_Frontend/src/app/components/home/home.component.html
@@ -28,7 +28,7 @@
     <div class="feature-box">
       <h3>Az oldalról</h3>
       <p>
-        Minden egyéb fotos információt a <a routerLink="/app-faq" routerLinkActive="active-link" >FAQ</a> oldalon megtalálsz.
+        Minden egyéb fotos információt a <a routerLink="/app-faq" routerLinkActive="active-link" >GYIK</a> oldalon megtalálsz.
       </p>
     </div>
   </div>
